--- a/animeflx/style.css
+++ b/animeflx/style.css
@@ -3,7 +3,9 @@
 @import url("styles/entrar.css");
 @import url("styles/carrossel.css");
 @import url("styles/card.css");
-
+@import url("styles/sobre.css");
+@import url("styles/footer.css");
+@import url("styles/noticias.css");
 :root{
     --red: rgb(104, 11, 11);
     --white: #ffffff;
