--- a/animeflx/styles/card.css
+++ b/animeflx/styles/card.css
@@ -49,7 +49,11 @@
 
 .boxTituloCard{
     display: block;
-    background: linear-gradient(to right, #3D0000, #600000, #7A1C1C); height: 25px; font-family: var(--font);text-align: center; font-weight: 700; padding: 1em; color:white;
+    background: linear-gradient(to right, #3D0000, #600000, #7A1C1C); 
+    height: 25px; font-family: var(--font);
+    text-align: center; font-weight: 700; 
+    padding: 1em; 
+    color:white;
     width: 97.4vw;
 }
 
@@ -71,3 +75,22 @@
     margin-top: 5px;
 
 }
+.carroselLista .Episodio{
+    width: 400px;
+    height: 250px;
+}
+            
+.cardAnime .Episodio{
+  width: 300px;
+  height: 150px;
+}
+
+.carroselLista .Episodio{
+    display: block;
+}
+
+.imagemCard .Episodio{
+    width: 300px;
+    height: 100px;
+}
+            
