--- a/animeflx/styles/header.css
+++ b/animeflx/styles/header.css
@@ -1,6 +1,6 @@
 .boxHeader{
     display: flex;
-    
+
     width: 100%;
     height: 70px;
     align-items: center;
@@ -12,6 +12,40 @@
 
 }
 
+.btnGenero{
+    border: none;
+    background-color: transparent;
+    font-family: 'Poppins';
+    color: var(--white);
+    cursor: pointer;
+    font-size: 16px;
+
+}
+
+.menuLinkGenero{
+    text-decoration: none;
+    color: white;
+    font-family: 'Poppins';
+    margin-top: 6em;
+}
+.menuGenero li{
+    margin-top: 1em;
+}
+.menuGenero{
+    color: white;
+    font-family: 'Poppins';
+    display: none; 
+  position: absolute;
+  background-color: #600000;
+  width: 100px;
+  height: 180px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  margin-top: 15em;
+  margin-left: 5em;
+  padding: 0.2em;
+}
+
 .src:focus{
     border-style: none;
     border: none;
@@ -20,6 +54,7 @@
 .boxTitulo{
     display: inline-flex;
     margin: 0 1em;
+    width: 200px;
 }
 
 .titulo{
@@ -36,10 +71,9 @@
 
 .boxMenu{
     display: flex;
-    justify-content: end;
-    align-items: end;
     text-align: center;
     align-content: center;
+    padding-right: 6em;
 }
 
 .menu{
